update Base64Util Base64.encodeBase64String